--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         </div>
     </header>
     <main>
-        
+        <section class="main-section">
+            <div class="pizzas-list">
+                
+            </div>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
