added clothes database from supabase

--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
         </div>
     </header>
     <main>
-        <section class="main-section">
+        <!-- pizza section -->
+        <section class="pizza-section">
             <div class="pizzas-list">
-                
+
+            </div>
+        </section>
+
+        <!-- clothes section -->
+        <section class="clothes-section">
+            <div class="clothes-list">
+
             </div>
         </section>
     </main>
