--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 
             </div>
         </section>
+
+        <!-- books section -->
+        <section class="books-section">
+            <div class="books-list">
+
+            </div>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
