--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 
             </div>
         </section>
+
+        <!-- candies section -->
+        <section class="candies-section">
+            <div class="candies-list">
+                
+            </div>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
